--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: Minfeng Qi
 subtitle: Personal Blog
-description: Welcome to my personal Blog
+description: Welcome to my Blog
 # 头像里面的标题
 avatarTitle: Dylan
 # 头像里面的描述
