--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,8 @@ comment:
 social:
     weibo:  
     github: Minfeng-Qi
-    # zhihu: panpanleopard
-    # juejin: xxx
-    jianshu: 
-    # twitter: 
+    zhihu: 
+    twitter: 
     mail: minfeng.qi7@gmail.com
 
 
