--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ enableToc: true
 # Comment
 comment:
     # livere: MTAyMC81MDk5NC8yNzQ3Ng  # https://www.livere.com
-    disqus: 
+    # disqus: 
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
@@ -35,7 +35,7 @@ baidu:
 # 使用博客模板请去掉或者更换 id
 ga:
     id:  
-    host: auto  
+    host:   
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
