--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Welcome to my Blog
 # 头像里面的标题
 avatarTitle: Dylan
 # 头像里面的描述
-avatarDesc: Blockchain / Privacy
+avatarDesc: Blockchain / IoT
 url: "https://minfengqi.com"
 
 # 博客是否自动生成目录，false为不生成
