--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ social:
     weibo:  
     github: Minfeng-Qi
     zhihu: 
-    twitter: 
+    twitter: @Dylan98796446
     mail: minfeng.qi7@gmail.com
 
 
