--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ enableToc: true
 # Comment
 comment:
     # livere: MTAyMC81MDk5NC8yNzQ3Ng  # https://www.livere.com
-    disqus: Dylan
+    # disqus: Dylan
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
